s1849: cadcAccessControl-Server updates for new RegistryClient.